parser/src/main/gen/CliffhangerParser.java
// Generated from /home/chedim/projects/cliff/parser/src/main/antlr/Cliffhanger.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CliffhangerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, SPACE=4, COLON=5, LFBRA=6, RFBRA=7, LPAREN=8, 
		RPAREN=9, WHITESPACE=10, ESC=11, ESC_TAB=12, ESC_NEWLINE=13, ESC_LINERET=14, 
		ESC_ESC=15, ESC_SQUOTE=16, ESC_DQUOTE=17, UNICODE=18, TRUE=19, FALSE=20, 
		IS=21, ARE=22, DEF=23, AN=24, A=25, THE=26, WHEN=27, BEFORE=28, NOT=29, 
		PLUS=30, MINUS=31, STAR=32, SLASH=33, HAT=34, LSHIFT=35, RSHIFT=36, BINARY_AND=37, 
		BOOLEAN_AND=38, DIGIT=39, LETTER=40, SQUOTE=41, DQUOTE=42, TEXT=43, WORD=44, 
		NUMBER=45, LTEQ=46, GTEQ=47, LT=48, GT=49, EQ=50, NEQ=51, AND=52, OR=53;
	public static final int
		RULE_file = 0, RULE_statement = 1, RULE_simpleStatement = 2, RULE_nameBranchedStatement = 3, 
		RULE_definitionReference = 4, RULE_typeRequest = 5, RULE_datapointName = 6, 
		RULE_substitution = 7, RULE_indexedDatapointName = 8, RULE_datapointDefinition = 9, 
		RULE_simpleDefinition = 10, RULE_labelDefinition = 11, RULE_valueDefinition = 12, 
		RULE_branchedDefinition = 13, RULE_branchedDefinitionLine = 14, RULE_branchedDefinitionConditionLine = 15, 
		RULE_branchedDefinitionSimpleConditionLine = 16, RULE_branchedDefinitionBranchedConditionLine = 17, 
		RULE_datapointCondition = 18, RULE_datapointConditionWhen = 19, RULE_datapointConditionBefore = 20, 
		RULE_expression = 21, RULE_expressionReference = 22, RULE_literal = 23, 
		RULE_stringLiteral = 24, RULE_booleanLiteral = 25, RULE_singleQuotedStringLiteral = 26, 
		RULE_escapedSingleQuotedStringMember = 27, RULE_singleQuotedStringMember = 28, 
		RULE_commonEscapedStringMembers = 29, RULE_commonStringMembers = 30, RULE_doubleQuotedStringLiteral = 31, 
		RULE_escapedDoubleQuotedStringMember = 32, RULE_doubleQuotedStringMember = 33, 
		RULE_escapedSubstitution = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "statement", "simpleStatement", "nameBranchedStatement", "definitionReference", 
			"typeRequest", "datapointName", "substitution", "indexedDatapointName", 
			"datapointDefinition", "simpleDefinition", "labelDefinition", "valueDefinition", 
			"branchedDefinition", "branchedDefinitionLine", "branchedDefinitionConditionLine", 
			"branchedDefinitionSimpleConditionLine", "branchedDefinitionBranchedConditionLine", 
			"datapointCondition", "datapointConditionWhen", "datapointConditionBefore", 
			"expression", "expressionReference", "literal", "stringLiteral", "booleanLiteral", 
			"singleQuotedStringLiteral", "escapedSingleQuotedStringMember", "singleQuotedStringMember", 
			"commonEscapedStringMembers", "commonStringMembers", "doubleQuotedStringLiteral", 
			"escapedDoubleQuotedStringMember", "doubleQuotedStringMember", "escapedSubstitution"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\n'", "';'", "'#'", "' '", "':'", "'{'", "'}'", "'('", "')'", 
			null, "'\\'", "'\\t'", "'\\n'", "'\\r'", "'\\\\'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'+'", 
			"'-'", "'*'", "'/'", "'^'", "'<<'", "'>>'", "'&'", "'and'", null, null, 
			"'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "SPACE", "COLON", "LFBRA", "RFBRA", "LPAREN", 
			"RPAREN", "WHITESPACE", "ESC", "ESC_TAB", "ESC_NEWLINE", "ESC_LINERET", 
			"ESC_ESC", "ESC_SQUOTE", "ESC_DQUOTE", "UNICODE", "TRUE", "FALSE", "IS", 
			"ARE", "DEF", "AN", "A", "THE", "WHEN", "BEFORE", "NOT", "PLUS", "MINUS", 
			"STAR", "SLASH", "HAT", "LSHIFT", "RSHIFT", "BINARY_AND", "BOOLEAN_AND", 
			"DIGIT", "LETTER", "SQUOTE", "DQUOTE", "TEXT", "WORD", "NUMBER", "LTEQ", 
			"GTEQ", "LT", "GT", "EQ", "NEQ", "AND", "OR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cliffhanger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CliffhangerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LFBRA) | (1L << WHITESPACE) | (1L << AN) | (1L << A) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public NameBranchedStatementContext nameBranchedStatement() {
			return getRuleContext(NameBranchedStatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CliffhangerParser.EOF, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(75);
				simpleStatement();
				}
				break;
			case 2:
				{
				setState(76);
				nameBranchedStatement();
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(79);
				match(T__0);
				2,
				}
				break;
			case T__1:
				{
				setState(81);
				match(T__1);
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(82);
						match(T__0);
						}
						} 
					}
					setState(87);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			case EOF:
				{
				setState(88);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleStatementContext extends ParserRuleContext {
		public DatapointNameContext name;
		public DatapointDefinitionContext definition;
		public DatapointNameContext datapointName() {
			return getRuleContext(DatapointNameContext.class,0);
		}
		public DatapointDefinitionContext datapointDefinition() {
			return getRuleContext(DatapointDefinitionContext.class,0);
		}
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitSimpleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitSimpleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((SimpleStatementContext)_localctx).name = datapointName();
			setState(92);
			((SimpleStatementContext)_localctx).definition = datapointDefinition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameBranchedStatementContext extends ParserRuleContext {
		public DefinitionReferenceContext definitionReference() {
			return getRuleContext(DefinitionReferenceContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CliffhangerParser.COLON, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CliffhangerParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CliffhangerParser.WHITESPACE, i);
		}
		public NameBranchedStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameBranchedStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterNameBranchedStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitNameBranchedStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitNameBranchedStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameBranchedStatementContext nameBranchedStatement() throws RecognitionException {
		NameBranchedStatementContext _localctx = new NameBranchedStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nameBranchedStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			definitionReference();
			setState(95);
			match(COLON);
			setState(104); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(96);
					match(T__0);
					setState(100);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(97);
							match(WHITESPACE);
							}
							} 
						}
						setState(102);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					}
					setState(103);
					statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(106); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionReferenceContext extends ParserRuleContext {
		public List<TypeRequestContext> typeRequest() {
			return getRuleContexts(TypeRequestContext.class);
		}
		public TypeRequestContext typeRequest(int i) {
			return getRuleContext(TypeRequestContext.class,i);
		}
		public List<DatapointNameContext> datapointName() {
			return getRuleContexts(DatapointNameContext.class);
		}
		public DatapointNameContext datapointName(int i) {
			return getRuleContext(DatapointNameContext.class,i);
		}
		public List<IndexedDatapointNameContext> indexedDatapointName() {
			return getRuleContexts(IndexedDatapointNameContext.class);
		}
		public IndexedDatapointNameContext indexedDatapointName(int i) {
			return getRuleContext(IndexedDatapointNameContext.class,i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CliffhangerParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CliffhangerParser.WHITESPACE, i);
		}
		public DefinitionReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterDefinitionReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitDefinitionReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitDefinitionReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionReferenceContext definitionReference() throws RecognitionException {
		DefinitionReferenceContext _localctx = new DefinitionReferenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definitionReference);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(112);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(108);
					typeRequest();
					}
					break;
				case 2:
					{
					setState(109);
					datapointName();
					}
					break;
				case 3:
					{
					setState(110);
					indexedDatapointName();
					}
					break;
				case 4:
					{
					setState(111);
					match(WHITESPACE);
					}
					break;
				}
				}
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LFBRA) | (1L << WHITESPACE) | (1L << AN) | (1L << A) | (1L << WORD))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeRequestContext extends ParserRuleContext {
		public TerminalNode A() { return getToken(CliffhangerParser.A, 0); }
		public TerminalNode AN() { return getToken(CliffhangerParser.AN, 0); }
		public TypeRequestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRequest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterTypeRequest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitTypeRequest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitTypeRequest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeRequestContext typeRequest() throws RecognitionException {
		TypeRequestContext _localctx = new TypeRequestContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeRequest);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==AN || _la==A) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatapointNameContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(CliffhangerParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CliffhangerParser.WORD, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CliffhangerParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CliffhangerParser.WHITESPACE, i);
		}
		public List<SubstitutionContext> substitution() {
			return getRuleContexts(SubstitutionContext.class);
		}
		public SubstitutionContext substitution(int i) {
			return getRuleContext(SubstitutionContext.class,i);
		}
		public DatapointNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datapointName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterDatapointName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitDatapointName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitDatapointName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatapointNameContext datapointName() throws RecognitionException {
		DatapointNameContext _localctx = new DatapointNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_datapointName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(121);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case WORD:
						{
						setState(118);
						match(WORD);
						}
						break;
					case WHITESPACE:
						{
						setState(119);
						match(WHITESPACE);
						}
						break;
					case LFBRA:
						{
						setState(120);
						substitution();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(123); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubstitutionContext extends ParserRuleContext {
		public TerminalNode LFBRA() { return getToken(CliffhangerParser.LFBRA, 0); }
		public TerminalNode RFBRA() { return getToken(CliffhangerParser.RFBRA, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SubstitutionContext substitution() {
			return getRuleContext(SubstitutionContext.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CliffhangerParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CliffhangerParser.WHITESPACE, i);
		}
		public SubstitutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_substitution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterSubstitution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitSubstitution(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitSubstitution(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubstitutionContext substitution() throws RecognitionException {
		SubstitutionContext _localctx = new SubstitutionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_substitution);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(LFBRA);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126);
					match(WHITESPACE);
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(132);
				expression(0);
				}
				break;
			case 2:
				{
				setState(133);
				substitution();
				}
				break;
			}
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(136);
				match(WHITESPACE);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(RFBRA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexedDatapointNameContext extends ParserRuleContext {
		public Token index;
		public List<DatapointNameContext> datapointName() {
			return getRuleContexts(DatapointNameContext.class);
		}
		public DatapointNameContext datapointName(int i) {
			return getRuleContext(DatapointNameContext.class,i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(CliffhangerParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(CliffhangerParser.NUMBER, i);
		}
		public IndexedDatapointNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexedDatapointName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).enterIndexedDatapointName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CliffhangerListener ) ((CliffhangerListener)listener).exitIndexedDatapointName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CliffhangerVisitor ) return ((CliffhangerVisitor<? extends T>)visitor).visitIndexedDatapointName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndexedDatapointNameContext indexedDatapointName() throws RecognitionException {
		IndexedDatapointNameContext _localctx = new IndexedDatapointNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_indexedDatapointName);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(144);
					datapointName();
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__2) {
						{
						setState(145);
						match(T__2);
						setState(146);
						((IndexedDatapointNameContext)_localctx).index = match(NUMBER);
						}
					}
